# vibinears

./: .dockerignore  .gitignore  docker-compose.dev.yml  docker-compose.prod.yml  package.json  pnpm-workspace.yaml  tsconfig.base.json  turbo.json
.github/workflows/: ci.yml  deploy-staging.yml  docker-build.yml  security-scan.yml
apps/web/: next.config.js  (+2 more)
scripts/: dev-up.sh  lint-all.sh  security-check.sh  test-all.sh
services/api/: pyproject.toml
services/api/app/: main.py
services/api/app/core/: audit.py  encryption.py  permissions.py  pii_redaction.py  rate_limit.py  security.py
services/api/app/core/anti_abuse/: social_anti_abuse.py
services/api/app/core/audit/: admin_action_logging.py  audit_logger.py
services/api/app/core/auth/: jwt_auth.py  refresh_token_rotation.py
services/api/app/core/backups/: backup_encryption.py
services/api/app/core/consent/: audio_consent.py  memory_consent.py
services/api/app/core/devices/: device_authentication.py
services/api/app/core/firmware/: firmware_signing.py
services/api/app/core/payments/: idempotency_keys.py  payment_security.py
services/api/app/core/privacy/: encrypted_secrets.py  encrypted_sensitive_data.py  pii_redaction.py
services/api/app/core/rbac/: permissions.py
services/api/app/core/security/: cors_protection.py  csrf_protection.py  input_sanitization.py  rate_limiting.py  secure_headers.py  suspicious_activity.py
services/api/app/core/tenancy/: tenant_isolation.py
services/api/app/core/validation/: request_validation.py
services/api/app/core/webhooks/: signature_verification.py
(+15 files in other folders)
